--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "repository": {
     "type" : "git",
-    "url" : "https://github.com/eduardoitoeste/testUpdate.git"
+    "url" : "https://github.com/eduardoitoeste/testUpdate.git",
   },
 }
