--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^8.1.0",
-    "electron-builder": "^22.4.0"
+    "electron-builder": "20.36.2"
   },
   "dependencies": {
     "electron-updater": "^2.2.4"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/eduardoitoeste/testUpdate.git"
+    "type": "git",
+    "url": "https://github.com/eduardoitoeste/testUpdate.git"
+  },
+  "build": {
+    "appId": "com.example.testElectronUpdateIea",
+    "mac": {
+      "category": "com.example.testElectronUpdateIea"
+    }
   }
 }
