--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^8.1.0",
-    "electron-builder": "20.36.2"
+    "electron-builder": "^22.4.0"
   },
   "dependencies": {
     "electron-updater": "^2.2.4"
